@@ -1,3 +1,12 @@
+2011-01-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc,
+	  src/z80/z80.h,
+	  src/z80/main.c,
+	  src/z80/gen.c:
+	  Improved handling of A in the new register allocator and made it the default.
+
 2011-01-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/z80.h,
